--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -6,7 +6,7 @@ global
 
        log 127.0.0.1 local3             #[err warning info debug] 
 
-       chroot /usr/local/haproxy        #chroot运行的路径 
+       # chroot /usr/local/haproxy        #chroot运行的路径 
 
        #uid 99                          #所属运行的用户uid 
 
