--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -68,27 +68,35 @@ defaults
 
 ####################监控页面的设置####################### 
 
-listen admin_status                     #Frontend和Backend的组合体,监控组的名称，按需自定义名称 
+# listen admin_status                     #Frontend和Backend的组合体,监控组的名称，按需自定义名称 
 
-	bind :65532                  #监听端口 
+# 	bind :65532                  #监听端口 
 
-	mode http                      #http的7层模式 
+# 	mode http                      #http的7层模式 
 
-	log 127.0.0.1 local3 err        #错误日志记录 
+# 	log 127.0.0.1 local3 err        #错误日志记录 
 
-	stats refresh 5s               #每隔5秒自动刷新监控页面 
+# 	stats refresh 5s               #每隔5秒自动刷新监控页面 
 
-	stats uri /admin?stats          #监控页面的url 
+# 	stats uri /admin?stats          #监控页面的url 
 
-	stats realm Haproxy\ Statistics  #监控页面的提示信息 
+# 	stats realm Haproxy\ Statistics  #监控页面的提示信息 
 
-	stats auth admin:admin      #监控页面的用户和密码admin, 可以设置多个用户名 
+# 	stats auth admin:admin      #监控页面的用户和密码admin, 可以设置多个用户名 
 
-	#stats auth other:other        #监控页面的用户和密码other
+# 	#stats auth other:other        #监控页面的用户和密码other
 
-	stats hide-version              #隐藏统计页面上的HAproxy版本信息  
+# 	stats hide-version              #隐藏统计页面上的HAproxy版本信息  
 
-	stats admin if TRUE           #手工启用/禁用,后端服务器(haproxy-1.4.9以后版本) 
+# 	stats admin if TRUE           #手工启用/禁用,后端服务器(haproxy-1.4.9以后版本) 
+
+listen stats
+	bind 0.0.0.0:1080           #监听端口  
+	stats refresh 30s           #统计页面自动刷新时间  
+	stats uri /stats            #统计页面url  
+	stats realm Haproxy Manager #统计页面密码框上提示文本  
+	stats auth admin:admin      #统计页面用户名和密码设置  
+	#stats hide-version         #隐藏统计页面上HAProxy的版本信息
 
 
 # ########frontend前端配置##############
