--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -2,27 +2,27 @@
 
 global 
 
-       maxconn 20480                    #默认最大连接数 
+	maxconn 20480                    #默认最大连接数 
 
-       log 127.0.0.1 local3             #[err warning info debug] 
+	#log 127.0.0.1 local3             #[err warning info debug] 
 
-       # chroot /usr/local/haproxy        #chroot运行的路径 
+	# chroot /usr/local/haproxy        #chroot运行的路径 
 
-       #uid 99                          #所属运行的用户uid 
+	#uid 99                          #所属运行的用户uid 
 
-       #gid 99                           #所属运行的用户组 
+	#gid 99                           #所属运行的用户组 
 
-       user haproxy
+	uid haproxy
 
-       group haproxy
+	gid haproxy
 
-       daemon                          #以后台形式运行haproxy 
+	daemon                          #以后台形式运行haproxy 
 
-       nbproc 4                       #进程数量(可以设置多个进程提高性能) 
+	nbproc 4                       #进程数量(可以设置多个进程提高性能) 
 
-       #pidfile /home/haproxy/haproxy.pid     #haproxy的pid存放路径,启动进程的用户必须有权限访问此文件 
+	#pidfile /home/haproxy/haproxy.pid     #haproxy的pid存放路径,启动进程的用户必须有权限访问此文件 
 
-       ulimit-n 65535                   #ulimit的数量限制 
+	ulimit-n 65535                   #ulimit的数量限制 
 
 
 #####################默认的全局设置##############这些参数可以被利用配置到frontend，backend，listen组件## 
@@ -57,11 +57,11 @@ defaults
 
 	#balance leastconn                 #默认的负载均衡的方式,最小连接 
 
-	contimeout 5000                  #连接超时5s , 单位是ms
+	timeout connect 5000                  #连接超时5s , 单位是ms
 
-	clitimeout 50000                 #客户端超时 
+	timeout client 50000                 #客户端超时 
 
-	srvtimeout 50000                #服务器超时 
+	timeout server 50000                #服务器超时 
 
 	timeout check 2000               #心跳检测超时 
 
@@ -142,7 +142,7 @@ listen stats
 
 listen test
 	bind 0.0.0.0:18081 
-	mode http
+	mode tcp
 	balance roundrobin
 	#log 127.0.0.1 local0 debug 
 	server s1 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
