--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -4,7 +4,7 @@ global
 
 	maxconn 20480                    #默认最大连接数 
 
-	#log 127.0.0.1 local3             #[err warning info debug] 
+	log 127.0.0.1 local3             #[err warning info debug] 
 
 	# chroot /usr/local/haproxy        #chroot运行的路径 
 
@@ -12,9 +12,9 @@ global
 
 	#gid 99                           #所属运行的用户组 
 
-	uid haproxy
+	user haproxy
 
-	gid haproxy
+	group haproxy
 
 	daemon                          #以后台形式运行haproxy 
 
@@ -143,6 +143,7 @@ listen stats
 listen test
 	bind 0.0.0.0:18081 
 	mode tcp
+	option tcplog
 	balance roundrobin
 	#log 127.0.0.1 local0 debug 
 	server s1 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
