--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -20,7 +20,7 @@ global
 
 	nbproc 4                       #进程数量(可以设置多个进程提高性能) 
 
-	#pidfile /home/haproxy/haproxy.pid     #haproxy的pid存放路径,启动进程的用户必须有权限访问此文件 
+	#pidfile /var/run/haproxy.pid     #haproxy的pid存放路径,启动进程的用户必须有权限访问此文件 
 
 	ulimit-n 65535                   #ulimit的数量限制 
 
@@ -41,13 +41,13 @@ defaults
 
 	option dontlognull               #不记录健康检查的日志信息 
 
-	option forwardfor               #如果后端服务器需要获得客户端真实ip需要配置的参数，可以从Http Header中获得客户端ip  
+	#option forwardfor               #如果后端服务器需要获得客户端真实ip需要配置的参数，可以从Http Header中获得客户端ip  
 
 	option redispatch               #serverId对应的服务器挂掉后,强制定向到其他健康的服务器  
 
 	option abortonclose              #当服务器负载很高的时候，自动结束掉当前队列处理比较久的连接 
 
-	stats refresh 30                 #统计页面刷新间隔 
+	#stats refresh 30                 #统计页面刷新间隔 
 
 	retries 3                        #3次连接失败就认为服务不可用，也可以通过后面设置 
 
@@ -67,28 +67,6 @@ defaults
 
 
 ####################监控页面的设置####################### 
-
-# listen admin_status                     #Frontend和Backend的组合体,监控组的名称，按需自定义名称 
-
-# 	bind :65532                  #监听端口 
-
-# 	mode http                      #http的7层模式 
-
-# 	log 127.0.0.1 local3 err        #错误日志记录 
-
-# 	stats refresh 5s               #每隔5秒自动刷新监控页面 
-
-# 	stats uri /admin?stats          #监控页面的url 
-
-# 	stats realm Haproxy\ Statistics  #监控页面的提示信息 
-
-# 	stats auth admin:admin      #监控页面的用户和密码admin, 可以设置多个用户名 
-
-# 	#stats auth other:other        #监控页面的用户和密码other
-
-# 	stats hide-version              #隐藏统计页面上的HAproxy版本信息  
-
-# 	stats admin if TRUE           #手工启用/禁用,后端服务器(haproxy-1.4.9以后版本) 
 
 listen stats
 	bind 0.0.0.0:1080           #监听端口  
@@ -140,10 +118,14 @@ listen stats
 # 　　server s1 192.168.100.204:7222 weight 1 
 # 　　server s2 192.168.100.208:7222 weight 1
 
-listen test
+listen tcp_lb
 	bind 0.0.0.0:18081 
 	mode tcp
 	option tcplog
 	balance roundrobin
 	#log 127.0.0.1 local0 debug 
 	server s1 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
+	server s2 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
+	server s3 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
+	server s4 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
+	server s5 10.10.13.106:18081 weight 1 check inter 100 rise 2 fall 3
